<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lesson1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lesson1">SecondActivity</string>
    <string name="main_activity_button_open_lesson1">Lesson 1</string>
    <string name="title_activity_lesson2">Lesson2Activity</string>
    <string name="lesson2_activity_button_async">AsyncTask</string>
    <string name="lesson2_activity_button_toast">Toast</string>
    <string name="main_activity_button_open_lesson2">Lesson 2</string>
    <string name="lesson1_activity_letter_button_ok">Ясна=)</string>
    <string name="lesson2_activity_button_hide">Show/hide button</string>
    <string name="title_activity_lesson5">Lesson5Activity</string>
    <string name="main_activity_button_open_lesson5">Lesson 5</string>
    <string name="activity_lesson5_button_doservice">DoService</string>
    <string name="activity_lesson5_button_foreground_stop">Foreground Stop</string>
    <string name="activity_lesson5_button_foreground_start">Foreground Start</string>
    <string name="main_activity_button_open_lesson7">Lesson 7</string>

</resources>
