<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.tp.gexogen.lessons.MainActivity"
    >

    <Button
        android:id="@+id/main_activity_button_open_lesson1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/main_activity_button_open_lesson1"
        />

    <Button
        android:id="@+id/main_activity_button_open_lesson2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_activity_button_open_lesson1"
        android:layout_centerHorizontal="true"
        android:text="@string/main_activity_button_open_lesson2"
        />

    <Button
        android:id="@+id/main_activity_button_open_lesson5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_activity_button_open_lesson2"
        android:layout_centerHorizontal="true"
        android:text="@string/main_activity_button_open_lesson5"
        />

    <Button
        android:id="@+id/main_activity_button_open_lesson7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_activity_button_open_lesson5"
        android:layout_centerHorizontal="true"
        android:text="@string/main_activity_button_open_lesson7"
        />

</RelativeLayout>
