<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.tp.gexogen.lessons.lesson5.Lesson5Activity"
    >

    <Button
        android:id="@+id/activity_lesson5_button_doservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/activity_lesson5_button_doservice"
        />

    <EditText
        android:id="@+id/activity_lesson5_edit_text_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_lesson5_button_doservice"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        />

    <Button
        android:id="@+id/activity_lesson5_button_foreground_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_lesson5_button_doservice"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_lesson5_button_foreground_stop"
        />

    <Button
        android:id="@+id/activity_lesson5_button_foreground_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_lesson5_button_foreground_stop"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_lesson5_button_foreground_start"
        />
</RelativeLayout>
