<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.tp.gexogen.lessons.lesson2.Lesson2Activity"
    >

    <ImageView
        android:id="@+id/lesson2_activity_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/btn_star_big_on"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/lesson2_activity_image"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lesson2_activity_image"
        android:layout_toEndOf="@id/lesson2_activity_image"
        android:layout_toRightOf="@+id/lesson2_activity_image"
        android:animateLayoutChanges="true"
        android:gravity="center"
        >

        <Button
            android:id="@+id/lesson2_activity_button_async"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:text="@string/lesson2_activity_button_async"
            />

        <Button
            android:id="@+id/lesson2_activity_button_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lesson2_activity_button_async"
            android:text="@string/lesson2_activity_button_toast"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/lesson2_activity_button_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/lesson2_activity_button_hide"
        />

</RelativeLayout>
